src/objects/History__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>ActivityType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangedText__c</fullName>
        <label>ChangedText</label>
        <length>131068</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhereActivity__c</fullName>
        <label>WhereActivity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>WorkLog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>History</label>
    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>